Refactored Homotopy Chapter (Williamson proof still unclear)

--- a/refs.bib
+++ b/refs.bib
@@ -42,3 +42,18 @@
   volume    = {87},
   year      = {1968}
 }
+@article{williamson,
+  title     = {Cobordism of combinatorial manifolds},
+  author    = {Williamson, Robert E},
+  journal   = {Annals of mathematics},
+  pages     = {1--33},
+  year      = {1966},
+  publisher = {JSTOR}
+}
+@article{kuczma,
+  title={An introduction to the theory of functional equations and inequalities},
+  author={Kuczma, Marek},
+  journal={(No Title)},
+  year={2009},
+  publisher={Birkh{\"a}user Basel}
+}
