--- a/src/sections/homotopy/parts/paracompact.tex
+++ b/src/sections/homotopy/parts/paracompact.tex
@@ -3,34 +3,41 @@
     Let $B$ be a paracompact hausdorff space and let $\coll{V_\alpha}$
     be a locally finite open cover of $B$.
     Then there exists a locally finite closed cover $\coll{\overline{B_\beta}}$ of $B$
-    such that every $\overline{B_\beta}$ intersects only with
+    such that every $\overline{B_\beta}$ intersects with only
     finitely many $V_{\alpha_1}, \dots V_{\alpha_n}$.
 \end{mystatement}
 
 % proof
 \begin{myproof}
-    For every $b \in B$, there exists an open neighborhood $U_b$ of $b$ that intersects only with finitely many
+    For every $b \in B$, there exists an open neighborhood $U_b$ of $b$
+    that intersects only with finitely many
     \[ V_{\alpha_1}, \dots V_{\alpha_k} \]
     using the definition of local finiteness for $\coll{V_\alpha}$.
     Clearly, the collection $\coll{U_b}$ over all $b \in B$ covers $B$.
 
     Since $B$ is paracompact, there exists a locally finite subcover $\coll{B_\beta}$.
 
-    Now we have the collection $\coll{\overline{B_\beta}}$ that meets our requirements:
+    The collection $\coll{\overline{B_\beta}}$ meets our requirements, because
     \begin{enumerate}
         \item $\coll{\overline{B_\beta}}$ is locally finite:
         
         For an arbitrary $b \in B$, let $W_b$
-        be an open neighborhood of $b$ that intersects only finitely many $B_{\beta_1}, \dots, B_{\beta_k}$.
-        Now $W_b$ intersects only $\overline{B_{\beta_1}}, \dots, \overline{B_{\beta_1}}$ from $\coll{B_\beta}$, because
+        be an open neighborhood of $b$ that
+        intersects only finitely many $B_{\beta_1}, \dots, B_{\beta_k}$.
+        Now $W_b$ intersects only
+        $\overline{B_{\beta_1}}, \dots, \overline{B_{\beta_1}}$, because
         \[ W_b \cap B_\beta = \emptyset \]
         \[ \implies B_\beta \sub B - W_b \]
         \[ \implies \overline{B_\beta} \sub \overline{B - W_b} = B - W_b \]
-        \[ \implies W_b \cap \overline{B_\beta} = \emptyset \]
+        \[ \implies W_b \cap \overline{B_\beta} = \emptyset. \]
 
-        \item Every $\overline{B_\beta}$ intersects only finitely many $V_\alpha$
+        \item Every $\overline{B_\beta}$ intersects
+        only finitely many $V_{\alpha_1}, \dots V_{\alpha_k}$:
         
-        Since $B_\beta \sub U_b$ for some $b \in B$, $B_\beta$ intersects only finitely many $V_\alpha$.
-        Using the same arguments as in 1., it follows that $\overline{B_\beta}$ intersects with the exact same $V_\alpha$.
+        Since $B_\beta \sub U_b$ for some $b \in B$, $B_\beta$
+        intersects only finitely many $V_\alpha$.
+        Using the same argument as in (1.),
+        it follows that $\overline{B_\beta}$ intersects
+        with the exact same $V_\alpha$.
     \end{enumerate}
 \end{myproof}
