--- a/src/sections/homotopy/parts/statement.tex
+++ b/src/sections/homotopy/parts/statement.tex
@@ -1,5 +1,6 @@
 % theorem
-\begin{mystatement}{theorem}[Homotopy Theorem]{homotopy::theorem}
-    Let $\bb$ be a microbundle over $B$ and let $f, g: A \to B$ be two maps where $A$ is paracompact.
+\begin{mystatement}{theorem}[Homotopy Theorem]{homotopy::theorem}[58]
+    Let $\bb$ be a microbundle over $B$ and let $f, g: A \to B$
+    be two maps where $A$ is paracompact hausdorff.
     If $f$ and $g$ are homotopic, then $\ind{f}\bb$ and $\ind{g}\bb$ are isomorphic.
 \end{mystatement}
