--- a/src/sections/homotopy/parts/williamson.tex
+++ b/src/sections/homotopy/parts/williamson.tex
@@ -1,3 +1,4 @@
+
 % foreword williamson
 \begin{myparagraph}
     The bundle-germ is indeed a generalization of the isomorphism-germ,
@@ -7,12 +8,13 @@
 % williamson
 \begin{mystatement}{proposition}[Williamson]{homotopy::williamson}
     Let $\bb$ and $\bb'$ be two microbundles over $B$.
-    A bundle-germ $\germdef{F}{\bb}{\bb'}$ covering the identity map is an isomorphism-germ.
+    A bundle-germ $\germdef{F}{\bb}{\bb'}$ covering
+    the identity map is an isomorphism-germ.
 \end{mystatement}
 
 % foreword lemma
 \begin{myparagraph}
-    First, show a lemma that is necessary for the proof of the proposition.
+    Firstly, we show a lemma that is necessary for the proof of the proposition.
 \end{myparagraph}
 
 % lemma
