--- a/src/sections/homotopy/section.tex
+++ b/src/sections/homotopy/section.tex
@@ -1,12 +1,14 @@
 \begin{myparagraph}
     In this chapter we will prove the Homotopy Theorem,
-    which states the following.
+    which is a fundamental result for microbundles.
+    It states the following.
 \end{myparagraph}
 \input{src/sections/homotopy/parts/statement}
 \begin{myparagraph}
-    In order to prove this, we introduce additional
-    concepts to put microbundles into relation allowing us to
-    understand isomorphy between microbundles better.
+    In order to prove this theorem,
+    we first introduce the concept of map-germs
+    on microbundles which allows us to classify
+    isomorphisms between microbundles.
 \end{myparagraph}
 \section{Map-Germs}\label{section::germs}
 \input{src/sections/homotopy/parts/germ}
