--- a/src/sections/homotopy/parts/glueing.tex
+++ b/src/sections/homotopy/parts/glueing.tex
@@ -5,10 +5,12 @@
 \end{myparagraph}
 
 % lemma
-\begin{mystatement}{lemma}{homotopy::glueing}
+\begin{mystatement}{lemma}{homotopy::glueing}[67]
     % conditions
-    Let $\bb$ be a microbundle over $B$ and $\coll{B_\alpha}$ a locally finite collection of closed sets covering $B$.
-    Additionally, we are given a collection of bundle-germs $\germdef{F_\alpha}{\bb[B_\alpha]}{\bb'}$
+    Let $\bb$ be a microbundle over $B$ and $\coll{B_\alpha}$
+    a locally finite collection of closed sets covering $B$.
+    Additionally, we are given a collection
+    of bundle-germs $\germdef{F_\alpha}{\bb[B_\alpha]}{\bb'}$
     such that $F_\alpha = F_\beta$ on $\bb[B_\alpha \cap B_\beta]$.
     % conclusion
     Then there exists a bundle-germ $\germdef{F}{\bb}{\bb'}$ extending $F_\alpha$,
@@ -21,28 +23,31 @@
     For every $\alpha$ and $\beta$, choose an open neighborhood $U_{\alpha\beta}$ of $i(B_\alpha \cap B_\beta)$ on which the representative maps $f_\alpha$ and $f_\beta$ agree.
     Now consider
     \[ U := \set{ e \in E}{j(e) \in B_\alpha \cap B_\beta \implies e \in U_{\alpha\beta}} \]
-    which satisfies the following:
+    which is an open neighborhood of $i(B)$ because
     \begin{enumerate}
         % open
         \item $U$ is open:
 
-        We can express $U$ like this:
-        \[ E - \bigcup_{\alpha\beta} \{ \inv{j}(B_\alpha \cap B_\beta) \cap \cmpl{U_{\alpha\beta}} \} \]
-        
-        Since $\inv{j}(B_\alpha \cap B_\beta)$ and $\cmpl{U_{\alpha\beta}}$ are closed sets, $U$ must be open.
-        That is because an open set remains open after removing arbitrarily many closed sets.
+        Let $e \in U$ be arbitrary.
+
+        Since $\coll{B_\alpha}$ is locally finite,
+        there exists an open neighborhood $V$ of $j(e)$
+        that intersects with only finitely many $B_{\alpha_1}, \dots, B_{\alpha_n}$.
+        Note that with $e \in U$ it follows that $e \in U_{\alpha_i\alpha_j}, \forall 1 \le i, j \le n$.
+
+        Now we have an open neighborhood of $e$
+        \[ \bigcap_{1 \le i, j \le n} U_{\alpha_i\alpha_j} \cap \inv{j}(V) \]
+        which is contained in $U$ by construction.
+
         % subset
         \item $i(B) \sub U$:
         
         This follows from
-        \[ b \in B_\alpha \cap B_\beta \implies i(b) \in i(B_\alpha \cap B_\beta) \sub U_{\alpha\beta} \]
-        and $j(i(b)) = b$.
+        \[ j(i(b)) = b \in B_\alpha \cap B_\beta \implies i(b) \in i(B_\alpha \cap B_\beta) \sub U_{\alpha\beta}. \]
     \end{enumerate}
     Now we can define $f: U \to E(\bb')$ in the obvious way
     \[ f(u \in U_{\alpha\beta}) := f_\alpha(u) = f_\beta(u) \]
     which is continuous according to the \extref{glueing lemma}.
-    We see that $f$ agrees with $f_\alpha$ on $U_{\alpha\alpha}$,
-    hence $f$ is a representative for a bundle-germ $\germdef{F}{\bb}{\bb'}$ extending $\coll{F_\alpha}$.
-    
-    Therefore, $f$ is a representative map for our required $F$.
+    In particular, $f$ agrees with $f_\alpha$ on $U_{\alpha\alpha}$
+    and hence $f$ is a representative for a bundle-germ $\germdef{F}{\bb}{\bb'}$ extending $\coll{F_\alpha}$.
 \end{myproof}
