--- a/src/sections/homotopy/parts/lemma1.tex
+++ b/src/sections/homotopy/parts/lemma1.tex
@@ -1,41 +1,61 @@
 \begin{scope}
     % defines
     \newcommand{\bbleft} {
-        \bb[B \cross [0, \half]]
+        \bb[B {\cross} [0, \half]]
     }
     \newcommand{\bbright} {
-        \bb[B \cross [\half, 1]]
+        \bb[B {\cross} [\half, 1]]
     }
     \newcommand{\bbhalf} {
-        \bb[B \cross \coll{\half{}}]
+        \bb[B {\cross} \coll{\half{}}]
     }
 
-    % foreword
-    \begin{myparagraph}
-        Using the previous lemma,
-        we can show a criteria on whether a microbundle
-        over a cylinder base space is trivial.        
-    \end{myparagraph}
+    % % foreword
+    % \begin{myparagraph}
+    %     Using the previous lemma,
+    %     we can show a criteria on whether a microbundle
+    %     over a cylinder base space is trivial.        
+    % \end{myparagraph}
 
     % lemma
-    \begin{mystatement}{lemma}{homotopy::lemma1}
-        Let $\bb$ be a microbundle over $\cyl{B}$. If $\bbleft$ and $\bbright$ are both trivial,
+    \begin{mystatement}{lemma}{homotopy::lemma1}[67]
+        Let $\bb$ be a microbundle over $\cyl{B}$.
+        If $\bbleft$ and $\bbright$ are both trivial,
         then $\bb$ itself is trivial.
     \end{mystatement}
 
     % proof
     \begin{myproof}
-        Consider the identity bundle-germ over $\bbhalf$, that is the bundle-germ represented by the identity on $E(\bbhalf)$.
-        Since $\bbright$ is trivial, we can extend this bundle-germ to 
-        \[ \germ{\bbright}{\bbhalf} \]
-        by the representative
-        \[ B \cross [\half, 1] \cross \R^n \to B \cross \coll{\half} \cross \R^n \]
-        \[ (b, t, x) \mapsto (b, \half, x). \]
-        Here we identified an open subset of $E(\bb[B \cross [\half, 1]])$ with $B \cross [\half, 1] \cross \R^n$ using \myintref{microbundle::paracompact}.
-        Using the previous lemma, we can piece this together with the identity bundle-germ on $\bbleft$ (note that the bundle-germs agree on their intersection) resulting in a bundle-germ
+        Consider the identity bundle-germ over $\bbhalf$,
+        defined as the bundle-germ represented by the identity on $E(\bbhalf)$.
+        
+        Since $\bbright$ and $\bbhalf$ are both trivial,
+        there exist isomorphism-germs
+        \[
+            \germdef{R}{\bbright}{\be{B {\cross} [\half, 1]}} \tand
+            \germdef{L}{\bbhalf}{\be{B {\cross} \coll{\half}}}.
+        \]
+
+        We can define a bundle-germ $\germ{\bbright}{\bbhalf}$
+        extending the identity on $\bbhalf$ using
+        \[
+            \germdef{M}{\be{B \cross [\half, 1]}}{\be{B \cross \coll{\half}}} \twith
+            (b, t, x) \mapsto (b, \half, x)
+        \]
+        to form the composition $\inv{L} \circ M \circ R$.
+
+        Using the previous lemma, we can piece this together with the
+        identity bundle-germ on $\bbleft$
+        (note that the bundle-germs agree on their intersection)
+        resulting in a bundle-germ
         \[ \germ{\bb}{\bbleft}. \]
 
-        The previous corollary infers that $\bb$ is isomorphic to $\ind{r}\bbleft$ where $r: B \cross [0, 1]$ is the retraction $(b, t) \mapsto (b, \min(t, \half))$.
-        But $\bbleft$ is trivial, hence $\ind{r}\bbleft$ is trivial as well (\myintref{induced::trivial}) which concludes the proof.
+        \myintref{homotopy::corollary} infers that $\bb$
+        is isomorphic to $\ind{r}\bbleft$
+        where $r: B \cross [0, 1]$ is the
+        retraction $(b, t) \mapsto (b, \min(t, \half))$.
+        But $\bbleft$ is trivial, hence $\ind{r}\bbleft$ is
+        trivial as well (see \myintref{induced::trivial}),
+        which concludes the proof.
     \end{myproof}
 \end{scope}
