--- a/src/sections/homotopy/parts/lemma3.tex
+++ b/src/sections/homotopy/parts/lemma3.tex
@@ -5,10 +5,10 @@
     }
 
     % lemma
-    \begin{mystatement}{lemma}{homotopy::lemma3}
+    \begin{mystatement}{lemma}{homotopy::lemma3}[67]
         Let $\bb$ be a microbundle over $\cyl{B}$ where $B$ is paracompact hausdorff.
-        Then there exists a bundle map-germ $\germdef{R}{\bb}{\bb[\cylup{B}]}$
-        covering the standard retraction $r: \cyl{B} \to \cylup{B}$ with $(b, t) \mapsto (b, 1)$.
+        Then there exists a bundle-germ $\germdef{R}{\bb}{\bb[\cylup{B}]}$
+        covering the retraction $r: \cyl{B} \to \cylup{B}$ with $r(b, t) = (b, 1)$.
     \end{mystatement}
 
     % proof
@@ -16,17 +16,17 @@
         % partition of unity
         First, we assume a locally finite covering $\{V_\alpha\}$ of open sets
         where $\bb[\cyl{V_\alpha}]$ is trivial.
-        The existence of such a covering is justified by the \myintref{homotopy::lemma2} and
-        the fact that any open cover of $B$ has a locally finite subcover due to paracompactness.
+        The existence of such a covering is justified
+        by \myintref{homotopy::lemma2} and paracompactness of $B$.
 
-        This open cover has a partition of unity ($B$ is paracompact hausdorff) 
-        \[ \lambda_\alpha: B \to \I \]
-        with $\supp \lambda_\alpha \sub V_\alpha$ that is rescaled in way that
+        This cover can be equipped with a partition of unity 
+        \[ \lambda_\alpha: B \to \I \twith \supp \lambda_\alpha \sub V_\alpha \]
+        since $B$ is paracompact hausdorff, that is rescaled in way that
         \[ \max_\alpha(\lambda_\alpha(b)) = 1, \forall b \in B. \]
-        This can be achieved by dividing $\lambda_\alpha$ with $\max_\alpha \lambda_\alpha$
+        Such a rescaling can be achieved by dividing $\lambda_\alpha$ by $\max_\alpha \lambda_\alpha$
         which is well-defined because $\coll{V_\alpha}$ is locally finite and continuous
         because the $\max$ function is continuous.
-        Also, $\max_\alpha \lambda_\alpha > 0$ since the initial
+        Also, $\max_\alpha \lambda_\alpha(b) > 0$ since the initial
         partition of unity adds up to $1$ in every point.
 
         % construction
@@ -34,24 +34,24 @@
         \[ r_\alpha(b, t) = (b, \max(t, \lambda_\alpha(b))). \]
 
         In the following,
-        we will construct bundle-germs $\germdef{R_\alpha}{\bb}{\bb}$ covering $r_\alpha$
-        and piece them together to obtain the desired bundle-germ.
+        we construct bundle-germs $\germdef{R_\alpha}{\bb}{\bb}$
+        covering $r_\alpha$ and `compose' them to obtain the required bundle-germ.
         \begin{enumerate}
             % local bundle-germ
             \item 
             We can divide $B \cross \I$ into two subsets
-            \[ A_\alpha := \cyl{\supp{\lambda_\alpha}} \tand \]
-            \[ A'_\alpha := \set{(b, t)}{t \ge \lambda_\alpha(b)}. \]
-            We already know that $\bb[A_\alpha]$
-            is trivial since $A_\alpha \sub \cyl{V_\alpha}$.
-            Like in the proof of \myintref{homotopy::lemma1},
-            we can extend the identity bundle-germ on $\bb[\A \cap \A']$ to a bundle-germ
+            \[
+                A_\alpha = \cyl{\supp{\lambda_\alpha}} \sub \cyl{V_\alpha} \tand
+                A'_\alpha = \set{(b, t)}{t \ge \lambda_\alpha(b)}.
+            \]
+            Since $\bb[A_\alpha]$ is trivial, we can,
+            analogous to the proof of \myintref{homotopy::lemma1},
+            extend the identity bundle-germ on $\bb[\A \cap \A']$ to a bundle-germ
             \[ \germ{\bb[\A]}{\bb[\A \cap \A']} \]
-            by the representative
-            \[ \A \cross \R^n \to (\A \cap \A') \cross \R^n\]
-            \[ (a, x) \mapsto (r_\alpha(a), x). \]
-            Piecing this together with the identity
-            bundle-germ $\bb[\A']$ ($\A$ and $\A'$ are both closed),
+            using the bundle-germ
+            \[ \germ{\be{\A}}{\be{\A \cap \A'}} \twith (a, x) \mapsto (r_\alpha(a), x). \]
+            Pieced together with the identity bundle-germ $\bb[\A']$
+            (note that $\A$ and $\A'$ are both closed),
             we obtain a bundle-germ $R_\alpha$ covering $r_\alpha$.
             
             % glue together
@@ -59,22 +59,26 @@
             Lastly, we construct a bundle-germ $R$ using the $R_\alpha$.
 
             Applying the well-ordering theorem,
-            which is equivalent to the axiom of choice, we can assume an ordering of $\coll{V_\alpha}$.
+            which is equivalent to the axiom of choice (see\cite[p.14]{kuczma}),
+            we can assume an ordering of $\coll{V_\alpha}$.
 
             Let $\coll{B_\beta}$ be a locally finite closed cover of $B$
-            such that $B_\beta$ intersects only finitely many $V_{\alpha_1} < \cdots < V_{\alpha_k}$
-            by applying the previous lemma.
+            such that $B_\beta$ intersects only
+            finitely many $V_{\alpha_1} < \cdots < V_{\alpha_k}$
+            obtained by \myintref{homotopy::paracompact}.
 
-            Now the composition $R_{\alpha_1} \circ \ldots \circ R_{\alpha_k}$ restricts to a bundle-germ 
+            Now the composition
+            $R_{\alpha_1} \circ \ldots \circ R_{\alpha_k}$ restricts to a bundle-germ 
             \[ \germdef{R(\beta)}{\bb[\cyl{B_\beta}]}{\bb[\cylup{B_\beta}]} \]
             covering the retraction $(b, t) \mapsto (b, 1)$.
             That is because for every $b \in B_\beta$,
-            there is some $1 \le i \le k$ with
+            we find an $1 \le i \le k$ with
             $\lambda_{\alpha_i}(b) = 1$ and hence $r_{\alpha_i}(b, t) = (b, 1)$.
             
             Pieced together using \myintref{homotopy::lemma1},
-            we obtain $R: \bb[\cyl{B}] \to \bb[\cylup{B}]$
-            covering $(b, t) \mapsto (b, 1)$, which concludes the proof.
+            we obtain a bundle-germ
+            \[ R: \bb[\cyl{B}] \to \bb[\cylup{B}] \]
+            covering $(b, t) \mapsto (b, 1)$.
         \end{enumerate}    
     \end{myproof}
 \end{scope}
