created general structure for introduction

--- a/refs.bib
+++ b/refs.bib
@@ -5,8 +5,24 @@
   issn      = {0072-5285},
   doi       = {https://doi.org/10.1007/978-1-4757-6848-0},
   url       = {https://link.springer.com/book/10.1007/978-1-4757-6848-0},
-  author    = {Glen E. Bredon},
+  author    = {Glen E. Brendon},
   publisher = {Springer New York, NY}
+}
+@article{kervaire,
+  title   = {A manifold which does not admit any differentiable structure},
+  author  = {Kervaire, Michel A},
+  journal = {Comment. Math. Helv},
+  volume  = {34},
+  number  = {1},
+  pages   = {257--270},
+  year    = {1960}
+}
+@article{kuczma,
+  title     = {An introduction to the theory of functional equations and inequalities},
+  author    = {Kuczma, Marek},
+  journal   = {(No Title)},
+  year      = {2009},
+  publisher = {Birkh{\"a}user Basel}
 }
 @book{lee,
   title     = {Introduction to Smooth Manifolds},
@@ -29,6 +45,28 @@
   url     = {https://www.sciencedirect.com/science/article/pii/0040938364900059},
   author  = {J. Milnor}
 }
+@article{milnor7sphere,
+  issn      = {0003486X},
+  url       = {http://www.jstor.org/stable/1969983},
+  author    = {John Milnor},
+  journal   = {Annals of Mathematics},
+  number    = {2},
+  pages     = {399--405},
+  publisher = {Annals of Mathematics},
+  title     = {On Manifolds Homeomorphic to the 7-Sphere},
+  urldate   = {2024-06-09},
+  volume    = {64},
+  year      = {1956}
+}
+@article{rourke,
+  title     = {An embedding without a normal microbundle},
+  author    = {Rourke, Colin P and Sanderson, Brian J},
+  journal   = {Inventiones mathematicae},
+  volume    = {3},
+  pages     = {293--299},
+  year      = {1967},
+  publisher = {Springer-Verlag}
+}
 @article{sanderson,
   issn      = {0003486X},
   url       = {http://www.jstor.org/stable/1970591},
@@ -49,11 +87,4 @@
   pages     = {1--33},
   year      = {1966},
   publisher = {JSTOR}
-}
-@article{kuczma,
-  title={An introduction to the theory of functional equations and inequalities},
-  author={Kuczma, Marek},
-  journal={(No Title)},
-  year={2009},
-  publisher={Birkh{\"a}user Basel}
 }
